Fix tesla size on ios

--- a/src/Modules/Tesla/Tesla.css
+++ b/src/Modules/Tesla/Tesla.css
@@ -1,4 +1,6 @@
 .Tesla {
+  width: 100vw;
+  overflow: hidden;
 }
 
 .Title {
@@ -16,4 +18,15 @@
   grid-template-columns: max-content max-content max-content max-content;
   grid-column-gap: 5px;
   margin-bottom: 15px;
+}
+
+@media only screen and (max-width: 1400px) {
+  .ButtonsContainer {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    justify-content: center;
+    grid-row-gap: 10px;
+    grid-column-gap: 5px;
+    margin-bottom: 15px;
+  }
 }
